update readme, emailer.properties take out server

--- a/README
+++ b/README
@@ -1,10 +1,13 @@
-groovy-emailer.
+groovy-emailer
 
-simple groovy emailer, the groovy way.
+simple groovy emailer, the groovy way.  javax.mail is seriously old fashioned.  The best features are available in groovy, but java can still have fun.
 
-javax.mail is seriously old fashioned.
+just fill in the properties file with your info and off you go.
 
-the best features are available in groovy, but java can still have fun.
+sendEmail >> send email or not.  will just log it if false.
+emailOverride >> address ALL emails should be sent to, regardless of their to field.  Useful for testing!
+emailServ >> Where your email server is.
+defaultFrom >> if you don't provide a from field, this is it.  Something like no-reply@yourco.com probably.
 
 //send one email, with one attachment
 def email = new Email(to:["email@email.com"],subject:"email",message:"email",from:"email@email.com")
